data/derived/comb/progs/unify/prog3978.ml.out
Characters 74-86:
  bigAdd (mulByDigit i-1 l) (mulByDigit i-1 l);;
          ^^^^^^^^^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type int
